app/components/layouts/footer.scss
@import "../../variables";

.footerContainer {
  position: relative;
  max-width: $container_width;
  margin: 20px auto 21px auto;
  display: flex;
  font-size: 13px;
  line-height: 1.85;
  color: $dark_navy2;

  .rightBox {
    position: absolute;
    right: 0;

    .link {
      margin-left: 32px;
      cursor: pointer;
    }
  }
}

@media (max-width: $mobile-width) {
  .footerContainer {
    position: fixed;
    bottom: 0;
    width: 100%;
    max-width: $container_width;
    font-size: 10px;
    line-height: 2.4;
    text-align: left;
    color: $space_gray19;
    padding-left: 15px;

    .rightBox {
      position: absolute;
      right: 18px;

      .link {
        margin-left: 10px;
        cursor: pointer;
      }
    }
  }
}

